[package]
name = "rtiow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
nalgebra-glm = "0.15"
palette = { git = "https://github.com/Ogeon/palette.git" }
indicatif = "0.16"
rand = "0.8"
